--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,12 +58,12 @@ jobs:
           plugin_contributors_head: master # Head reference (commit, tag, branch, etc.)
           plugin_contributors_ignored: bot # Ignore "bot" user
           plugin_contributors_contributions: yes # Display number of contributions for each contributor
-          
+
           # 🌟 Recently starred repositories
           plugin_stars: yes
           plugin_stars_limit: 10 # Limit to 10 entries was 4
           plugin_music: yes
           plugin_music_limit: 10 # Limit to 4 entries
           plugin_music_playlist: https://open.spotify.com/embed/playlist/2vPimjh2yzu3rplv1vbSbM # Use extracted playlist link
-          (plugin_music_provider and plugin_music_mode will be set automatically)
-          <iframe src="" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          # (plugin_music_provider and plugin_music_mode will be set automatically)
+          # <iframe src="" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
