--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,3 +67,9 @@ jobs:
           plugin_music_playlist: https://open.spotify.com/embed/playlist/2vPimjh2yzu3rplv1vbSbM # Use extracted playlist link
           # (plugin_music_provider and plugin_music_mode will be set automatically)
           # <iframe src="" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+          # 📌 Starred topics
+          plugin_topics: yes
+          plugin_topics_sort: stars # Sort by most starred topics
+          plugin_topics_mode: mastered # Display icons instead of labels
+          plugin_topics_limit: 20 # Disable limitations
